# calibrex-linux

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
calibrex/: __init__.py  argyllcms.py  gui.py
tests/: test_argyllcms.py
